--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -175,12 +175,12 @@
                 </div>
                 <!-- calendar start -->
                 <div
-                        class="tab-pane fade mt-4"
+                        class="tab-pane fade mt-5"
                         id="gantt-chart"
                         role="tabpanel"
                         aria-labelledby="gantt-chart-tab"
                 >
-                    <div class="toolbar mb-2">
+                    <div class="toolbar mb-4">
                         <button id="previous" class="btn btn-success">Previous</button>
                         <button id="today" class="btn btn-primary">Today</button>
                         <button id="next" class="btn btn-success">Next</button>
@@ -1152,8 +1152,75 @@
         };
 
         // ========================== Calendar View ===========================
+        const Calendar = tui.Calendar;
 
+        const calendar = new Calendar("#calendar", {
+            defaultView: "week",
+            taskView: true,
+            useDetailPopup: true,
+            isReadOnly: true,
+            template: {
+                monthDayname: function (dayname) {
+                    return (
+                        "<span class='calendar-week-dayname-name'>" + dayname.label + "</span>"
+                    );
+                },
+                timegridCurrentTime: function () {
+                    return "<span class='calendar-icon ic-time'></span> Current Time";
+                },
+                timegridNowIndicatorLabel: function (time) {
+                    return time.hour + ":" + time.minutes;
+                },
+            },
 
+        });
+
+        $("#previous").on("click", function () {
+            calendar.prev();
+        });
+
+        $("#next").on("click", function () {
+            calendar.next();
+        });
+
+        $("#today").on("click", function () {
+            calendar.today();
+        });
+
+        calendar.setOptions({
+            week: {
+                daynames: ["Mon", "Tue", "Wed", "Thu", "Fri"],
+                startDayOfWeek: 0,
+                workweek:true,
+                //set 12 hour format
+                hourStart: 7,
+                hourEnd: 19,
+            },
+        });
+        console.log(calendar.getOptions().template)
+
+        calendar.createEvents([
+            {
+                id: "1",
+                calendarId: "1",
+                title: "my schedule",
+                category: "time",
+                dueDateClass: "",
+                start: "2023-11-06T10:30:00+06:30",
+                end: "2023-11-06T14:30:00+06:30",
+                isReadOnly: true, // schedule is read-only
+            },
+            {
+                id: "2",
+                calendarId: "1",
+                title: "second schedule",
+                category: "time",
+                dueDateClass: "",
+                start: "2023-11-06T09:30:00+06:30",
+                end: "2023-11-07T17:30:00+06:30",
+                isReadOnly: true, // schedule is read-only
+            },
+        ]);
 
 
 
