--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -362,10 +362,19 @@
                         });
                 });
 
-            const fullQuillEditor =
+            const projectObjectiveEditor =
                 document.querySelector(".quill-editor-full");
 
-            const editor = new Quill(fullQuillEditor, {
+            const editProjectObjectiveEitor = document.querySelector("#edit-project-objective")
+
+            const editObjectiveEditor = new Quill(editProjectObjectiveEitor, {
+                modules : {
+                    toolbar : toolbaroptions,
+                },
+                theme : "snow",
+            })
+
+            const addObjectiveEditor = new Quill(projectObjectiveEditor, {
                 modules: {
                     toolbar: toolbaroptions,
                 },
@@ -691,7 +700,7 @@
                     console.log("architectures list : ", architectures);
                     const systemOutlines = sysSelect.selectedValues;
                     const deliverable = $("#deliverable").val();
-                    const objective = editor.root.innerHTML; // Assuming you're using a WYSIWYG editor like Quill
+                    const objective = addObjectiveEditor.root.innerHTML; // Assuming you're using a WYSIWYG editor like Quill
 
                     if (
                         projectName === "" ||
@@ -1434,20 +1443,6 @@
                                                         Basic design
                                                     </div>
                                                 </div>
-
-                                                <div class="row">
-                                                    <div
-                                                        class="col-lg-3 col-md-4 label col-4"
-                                                    >
-                                                        Client
-                                                    </div>
-                                                    <div
-                                                        class="col-lg-9 col-md-8 col-8"
-                                                        id="project-client-name"
-                                                    >
-                                                        DAT
-                                                    </div>
-                                                </div>
                                                 <div
                                                     class="accordion"
                                                     id="accordionExample"
@@ -1631,9 +1626,6 @@
                                                             <div
                                                                 class="accordion-body position-relative"
                                                             >
-                                                                <div
-                                                                    class="position-absolute bottom-0 end-0 rounded-circle p-1 fs-6 bg-primary text-white"
-                                                                ></div>
                                                                 <strong
                                                                     >This is the
                                                                     third item's
@@ -1742,7 +1734,7 @@
                                                         <label
                                                             for="project-edit-duration"
                                                             class="col-md-4 col-lg-3 col-form-label"
-                                                            >end date</label
+                                                            >Duration</label
                                                         >
                                                         <div
                                                             class="col-md-8 col-lg-9"
@@ -1765,16 +1757,13 @@
                                                         <div
                                                             class="col-md-8 col-lg-9"
                                                         >
-                                                            <textarea
-                                                                type="text"
-                                                                class="form-control border-task-description"
-                                                                id=""
-                                                                name="objective"
-                                                            ></textarea>
+                                                            <div
+                                                                id="edit-project-objective"
+                                                            ></div>
                                                         </div>
                                                     </div>
 
-                                                    <div class="text-center">
+                                                    <div class="text-center mt-5">
                                                         <button
                                                             type="submit"
                                                             class="btn btn-primary"
