fixe department.html

--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -90,7 +90,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.2.0/tagify.min.js"></script>
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/custome.js" defer></script>
     <script type="module" defer>
 
 
@@ -147,7 +146,7 @@
 
 // Create the <h5> element with class "mb-1 card-title modal-detail-title"
                         const title = document.createElement("h5");
-                        title.classList.add("mb-1", "card-title", "modal-detail-title");
+                        title.classList.add("mb-1", "card-title", "modal-detail-title", "card-text");
                         title.setAttribute("id", `DH-id-${currentDp.id}`)
                         title.textContent = currentDp.name;
 
