--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -142,7 +142,7 @@
                     <!-- TODO :: REDESIGN FORM FOR ADDING DEPARTMENT -->
 
                     <!-- issue modal start -->
-                    <div class="row g-3 " >
+                    <div class="row g-3 "  id="addIssueValidationForm">
                         <div class="col-lg-6">
                             <label for="title" class="col-sm-12 col-form-label" name="title">Issue Title<span
                                     style="color:#e86666"> *</span></label>
@@ -375,6 +375,35 @@
                 }));
             });
         });
+        //
+        // $("#addIssueValidationForm").validate({
+        //     rules: {
+        //         title: "required",
+        //         issue_category: "required",
+        //         user_pic: "required",
+        //         responsible_party: "required",
+        //         description: "required",
+        //         direct_cause: "required",
+        //         root_cause: "required",
+        //         place: "required",
+        //         impact: "required",
+        //     },
+        //     messages: {
+        //         title: "Please enter your title",
+        //         issue_category: "Please enter your issue category",
+        //         user_pic: "Please enter your Person In Charge",
+        //         responsible_party: "Please enter your responsible party",
+        //         description: "Please enter your description",
+        //         direct_cause: "Please enter your direct cause",
+        //         root_cause: "Please enter your root cause",
+        //         place: "Please enter your place",
+        //         impact: "Please enter your impact",
+        //     },
+        //     errorElement: "div",
+        //     errorPlacement: function(error, element) {
+        //         error.insertAfter(element);
+        //     }
+        // });
 
         $('#addIssue').on('click', function () {
             const title = $('#title').val();
@@ -584,6 +613,12 @@
             const root_cause = document.getElementById('newInput_3').value;
             const impact = document.getElementById('newInput_4').value;
             const place = document.getElementById('newInput_5').value;
+            // const issue_category = document.getElementById('issue_category').value;
+            // const user_pic = document.getElementById('user_pic').value;
+            // const responsible_party = document.getElementById('responsible_party').value;
+            // const description = document.getElementById('description').value;
+            // const title = document.getElementById('title').value;
+
 
 
             // Collect the updated values from input fields
@@ -595,6 +630,12 @@
                 root_cause: root_cause,
                 impact: impact,
                 place: place,
+                // issue_category: issue_category,
+                // user_pic: user_pic,
+                // responsible_party: responsible_party,
+                // description: description,
+                // title: title,
+
 
             };
 
@@ -643,6 +684,7 @@
             this.innerText = 'Edit';
         }
     });
+
 
 
 
