show project list by role, id

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -124,7 +124,7 @@
         ></script>
         <script src="/js/custome.js" defer></script>
         <script src="/js/getDataForProject.js" type="module" async></script>
-        <script src="/js/currentLoginUser.js" type="module" async></script>
+<!--        <script src="/js/currentLoginUser.js" type="module" async></script>-->
         <script type="module" defer>
             import {
                 formatDateFromMilliseconds,
